[package]
name = "test_os"
version = "0.1.0"
edition = "2021"

[[bin]]
name  = "test_os"
test  = false
bench = false


[dependencies]
volatile              = "0.2.6"
spin                  = "0.5.2"
x86_64                = "0.14"
pic8259               = "0.10.1"
pc-keyboard           = "0.5.0"
linked_list_allocator = "0.9.0"
uart_16550            = "0.2.0"

[dependencies.lazy_static]
version  = "1.0"
features = [
    "spin_no_std"
]

[dependencies.bootloader]
version  = "0.9.8"
features = [
    "map_physical_memory"
]


[package.metadata.bootimage]
test-args              = [
    "-device" , "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial" , "stdio"
]
test-success-exit-code = 33
test-timeout           = 300
